--- a/appendices.tex
+++ b/appendices.tex
@@ -66,4 +66,12 @@ The code used to plot figures from the model simulation output in this thesis wa
 %
 %\chapter{HPC computing simulations: set-up and compilation}
 %
-%%\chapter{Paper off-prints may also be attached with a traditional-format thesis}
+\chapter{Paper reprint}
+
+\textbf{Modelling Geomorphic Systems: Landscape Evolution}
+
+\noindent
+The content of Chapter \ref{chapter_landscape_evol} was adapted for an article in the British Society for Geomorphology's \textit{Geomorphological Techniques} article series. A reprint is included in this appendix.
+
+
+\includepdf[pages={-}, pagecommand={}, scale=.9]{Landscape_Evolution_Modelling_Valters.pdf}
