--- a/chapter_geomorph.tex
+++ b/chapter_geomorph.tex
@@ -112,7 +112,7 @@ To highlight the variation in erosion along the river channel, longitudinal chan
 % Ryedale TLIM
 \begin{figure}[htb]
 \includegraphics[width=14cm]{chp06_figures_scripts/fig_swath_profile_ryedale_erode_tlim.eps}
-\caption{Channel averaged elevation difference along the main river channel in the Ryedale catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 200m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the GRIDDED\_TLIM simulation shown in blue and the UNIFORM\_TLIM simulation shown in green.}
+\caption{Channel averaged elevation difference along the main river channel in the Ryedale catchment. Simulation using the transport limited erosion parametrisation. Longitudinal profile is averaged over bins spaced every 200m. Transverse averaging (across the channel) is done over a 10m wide section centred on the channel midpoint. Results from the \texttt{GRIDDED\_TLIM} simulation shown in blue and the \texttt{UNIFORM\_TLIM} simulation shown in green.}
 \label{fig_ryedale_swath_tlim}
 \end{figure}
 
