--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,10 +1,10 @@
 \title{Linking numerical landscape evolution models with high-resolution meteorological data}
 
-\author{Declan A. Valters}
+\author{Declan Valters}
 % Faculty of Life Sciences people should comment the next line out
 \school{Earth and Environmental Sciences}
 \faculty{Science and Engineering}
-\def\wordcount{xxxxx}
+\def\wordcount{74031}
 
 % Uncomment the line below to suppress the `List of Tables' page (optional)
 %\tablespagefalse
@@ -16,7 +16,7 @@
 %\def\declaration{All the work in this thesis has been sourced from Google.}
 
 \beforeabstract
-The contribution of this thesis is twofold: 1) The development of a hydrodynamic landscape evolution model for use on high-performance computing systems and 2) Assessing the sensitivity of hydrogeomorphic processes to high-resolution rainfall input data using the model.
+The contribution of this thesis is twofold: 1) The development of a hydrodynamic landscape evolution model for use on high-performance computing systems and 2) Assessing the sensitivity of hydro-geomorphic processes to high-resolution rainfall input data using the model.
 
 The thesis addresses a limitation in numerical landscape evolution models regarding how spatial variation in rainfall is represented or parameterised within such models. Typically, landscape evolution models forsake a realistic representation of rainfall patterns in favour of a simpler treatments of rainfall as being spatially homogeneous across the model domain. The simplification in rainfall inputs is still made despite the fact that many geomorphological processes are sensitive to thresholds of sediment entrainment and transport, driven by the distribution and movement of water within the landscape. 
 
@@ -60,7 +60,7 @@ Flood extent predictions and river discharges are found to be sensitive to the u
 This work was funded by the Natural Environment Research Council doctoral training grant number NE/L501591/1.
 \\~\\
 \noindent
-Data was provided by the British Atmospheric Data Centre, the Environment Agency (England), Cyfoeth Naturiol (Natural Resources Wales), Ordnance Survey Open Data, and the National River Flow Archives. 
+Data was provided by the British Atmospheric Data Centre, the Environment Agency (England), Ordnance Survey Open Data, and the UK National River Flow Archives. 
 \\~\\
 \noindent
 This work used the ARCHER UK National Supercomputing Service (\url{http://www.archer.ac.uk}) and the Centre for Environmental Data Analysis JASMIN computing facility (\url{http://www.jasmin.ac.uk/}).
