--- a/thesis.tex
+++ b/thesis.tex
@@ -14,7 +14,7 @@
 %\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
 %\includeonly{conclusions}
-\includeonly{chapter_LEMs}
+%\includeonly{chapter_LEMs}
 
 
 
@@ -31,6 +31,7 @@
 \usepackage{hypcap}
 \usepackage{gensymb}  % degree symbol
 \usepackage{subcaption}
+\usepackage{pdfpages}
 
 %\usepackage[]{hyperref}
 %\hypersetup{
